welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:6: error: type mismatch;
 found   : Unit
 required: Int
  } else if (you<=2 || date<=2) {
         ^